--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.cjs",
-    "build": "tsup src --out-dir build"  
+    "build": "tsup src --out-dir build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/node": "^24.5.2",
-    "tsup": "^8.5.0",
-    "tsx": "^4.20.5",
-    "typescript": "^5.9.2"
+    "@types/node": "24.5.2",
+    "tsup": "8.5.0",
+    "tsx": "4.20.5",
+    "typescript": "5.9.2"
   },
   "dependencies": {
-    "fastify": "^5.6.1"
+    "dotenv": "17.2.2",
+    "fastify": "5.6.1",
+    "zod": "4.1.11"
   }
 }
