--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/css": "0.11.1",
+    "@eslint/js": "9.36.0",
+    "@eslint/json": "0.13.2",
+    "@eslint/markdown": "7.3.0",
     "@types/node": "24.5.2",
+    "eslint": "9.36.0",
+    "globals": "16.4.0",
+    "jiti": "2.6.0",
     "tsup": "8.5.0",
     "tsx": "4.20.5",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.44.1"
   },
   "dependencies": {
     "dotenv": "17.2.2",
