--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@eslint/js": "9.36.0",
     "@eslint/json": "0.13.2",
     "@eslint/markdown": "7.3.0",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "24.5.2",
     "eslint": "9.36.0",
     "globals": "16.4.0",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "@prisma/client": "6.16.2",
+    "bcryptjs": "3.0.2",
     "dotenv": "17.2.2",
     "fastify": "5.6.1",
     "zod": "4.1.11"
