--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "tsup": "8.5.0",
     "tsx": "4.20.5",
     "typescript": "5.9.2",
-    "typescript-eslint": "8.44.1"
+    "typescript-eslint": "8.44.1",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.2.4"
   },
   "dependencies": {
     "@prisma/client": "6.16.2",
