--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node build/server.cjs",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +23,8 @@
     "@eslint/markdown": "7.3.0",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "24.5.2",
+    "@vitest/coverage-v8": "3.2.4",
+    "@vitest/ui": "3.2.4",
     "eslint": "9.36.0",
     "globals": "16.4.0",
     "jiti": "2.6.0",
