--- a/package.json
+++ b/package.json
@@ -1,48 +1,50 @@
 {
-  "name": "fitkey",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "start": "node build/server.cjs",
-    "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@eslint/css": "0.11.1",
-    "@eslint/js": "9.36.0",
-    "@eslint/json": "0.13.2",
-    "@eslint/markdown": "7.3.0",
-    "@types/bcryptjs": "2.4.6",
-    "@types/node": "24.5.2",
-    "@vitest/coverage-v8": "3.2.4",
-    "@vitest/ui": "3.2.4",
-    "eslint": "9.36.0",
-    "globals": "16.4.0",
-    "jiti": "2.6.0",
-    "prisma": "6.16.2",
-    "tsup": "8.5.0",
-    "tsx": "4.20.5",
-    "typescript": "5.9.2",
-    "typescript-eslint": "8.44.1",
-    "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.2.4"
-  },
-  "dependencies": {
-    "@fastify/jwt": "10.0.0",
-    "@prisma/client": "6.16.2",
-    "bcryptjs": "3.0.2",
-    "dayjs": "1.11.18",
-    "dotenv": "17.2.2",
-    "fastify": "5.6.1",
-    "zod": "4.1.11"
-  }
+    "name": "fitkey",
+    "version": "1.0.0",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "dev": "tsx watch src/server.ts",
+        "start": "node build/server.cjs",
+        "build": "tsup src --out-dir build",
+        "test": "vitest run --project unit",
+        "test:e2e": "vitest run --project e2e",
+        "test:watch": "vitest --project unit",
+        "test:e2e:watch": "vitest --project e2e",
+        "test:coverage": "vitest run --coverage",
+        "test:ui": "vitest --ui"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "devDependencies": {
+        "@eslint/css": "0.11.1",
+        "@eslint/js": "9.36.0",
+        "@eslint/json": "0.13.2",
+        "@eslint/markdown": "7.3.0",
+        "@types/bcryptjs": "2.4.6",
+        "@types/node": "24.5.2",
+        "@vitest/coverage-v8": "3.2.4",
+        "@vitest/ui": "3.2.4",
+        "eslint": "9.36.0",
+        "globals": "16.4.0",
+        "jiti": "2.6.0",
+        "prisma": "6.16.2",
+        "tsup": "8.5.0",
+        "tsx": "4.20.5",
+        "typescript": "5.9.2",
+        "typescript-eslint": "8.44.1",
+        "vite-tsconfig-paths": "5.1.4",
+        "vitest": "3.2.4"
+    },
+    "dependencies": {
+        "@fastify/jwt": "10.0.0",
+        "@prisma/client": "6.16.2",
+        "bcryptjs": "3.0.2",
+        "dayjs": "1.11.18",
+        "dotenv": "17.2.2",
+        "fastify": "5.6.1",
+        "zod": "4.1.11"
+    }
 }
