--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
         "@eslint/markdown": "7.3.0",
         "@types/bcryptjs": "2.4.6",
         "@types/node": "24.5.2",
+        "@types/supertest": "6.0.3",
         "@vitest/coverage-v8": "3.2.4",
         "@vitest/ui": "3.2.4",
         "eslint": "9.36.0",
         "globals": "16.4.0",
         "jiti": "2.6.0",
         "prisma": "6.16.2",
+        "supertest": "7.1.4",
         "tsup": "8.5.0",
         "tsx": "4.20.5",
         "typescript": "5.9.2",
