--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "vitest": "3.2.4"
     },
     "dependencies": {
+        "@fastify/cookie": "11.0.2",
         "@fastify/jwt": "10.0.0",
         "@prisma/client": "6.16.2",
         "bcryptjs": "3.0.2",
